Refactor code structure for improved readability and maintainability

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-GPU_Config_Log_20251213_082100.txt
-GPU_Config_Log_20251213_082100.csv
+/.vscode/extensions.json
+/.vscode/settings.json
+/.vscode/launch.json
+/.vscode/tasks.json
+/.vscode/*.code-workspace
+/.history/
+/.idea/ 
+.DS_Store
+Thumbs.db
+node_modules/
+dist/
+.env
+.env.local
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.vscode-test/
+coverage/
+*.log
+*.tsbuildinfo
+.cache/
