--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "szpro.ultimatehover",
-        "adamraichu.font-viewer"
+        "adamraichu.font-viewer",
+        "jeff-hughes.open-terminal-here"
     ]
 }
